<resources>
    <string name="app_name">Manly Minder 2</string>
    <string name="settings_main_settings">MAIN SETTINGS</string>
    <string name="alert_intervals_inkognito_mode_stuff_like_that">Alert intervals. Inkognito mode. Stuff like that.</string>
    <string name="alert_interval">ALERT INTERVAL</string>
    <string name="set_how_long_before_event_you_wish_to_be_warned">Set how long before event you wish to be warned.</string>
    <string name="settings_restore_defaults">Restore defaults</string>
    <string name="settings_add">Add</string>
    <string name="settings_on_the_day">På dagen. ❌</string>
    <string name="settings_1_day_before">1 day before ❌</string>
    <string name="settings_3_days_before">3 days before ❌</string>
    <string name="settings_1_week_before">1 week before ❌</string>
    <string name="settings_2_weeks_before">2 weeks before ❌</string>
    <string name="settings_4_weeks_before">4 weeks before ❌</string>
    <string name="settings_6_weeks_before">6 weeks before ❌</string>
    <string name="settings_inkognito_mode">INKOGNITO MODE</string>
    <string name="settings_she_might_not_like_this">She might not like this App. Pretend it\'s sports in reminders, and look like a sports App..</string>
    <string name="settings_inkognito_mode_select">Inkognito mode</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_save">SAVE</string>
    <string name="anniversary_title">Anniversary</string>
    <string name="anniversary_things_she_will_remeber">Things she will remeber - and expect you to do too.</string>
    <string name="anniversary_activate_service">Activate service</string>
    <string name="anniversary_add_events">Add events</string>
    <string name="anniversary_add">Add ➕</string>
    <string name="anniversary_wedding_day">Wedding day</string>
    <string name="birthday_birthday">Birthday</string>
    <string name="birthday_activate_service">Activate service</string>
    <string name="birthday_date_of_birth">Date of birth</string>
    <string name="reminder_time_of_day">Preferred time a day for reminding</string>
    <string name="birthday_the_date">20-07-1989 📆</string>
    <string name="flowers_flowers">Flowers</string>
    <string name="flowers_just_a_monthly_reminder">Just a monthly reminder to buy her something.</string>
    <string name="flowers_activate_service">Activate service</string>
    <string name="main_manly_minder">MANLY MINDER</string>
    <string name="main_be_thoughtfull">Be thoughtfull. You can do it.</string>
    <string name="main_settings_title">Settings</string>
    <string name="main_alert_intervals_inkognito_mode">Alert intervals. Inkognito mode. Stuff like that.</string>
    <string name="main_birthday">Birthday</string>
    <string name="main_get_her_something_nice">Get her something nice.</string>
    <string name="main_birthday_in">Birthday in 6-7 months. You\'re good.</string>
    <string name="main_valentine_day">Valentine day</string>
    <string name="main_just_do_it">Just do it.</string>
    <string name="main_anniversary">Anniversary</string>
    <string name="main_and_other_stuff_that_needs_reminding">And other stuff that needs reminding.</string>
    <string name="main_pms">PMS</string>
    <string name="main_those_citical_periods_be_warned_beforehand">Those citical periods. Be warned beforehand.</string>
    <string name="main_flowers">Flowers</string>
    <string name="main_dead_plants_do_the_trick">Dead plants do the trick.</string>
    <string name="pms_premenstrual_syndrome">Premenstrual syndrome</string>
    <string name="pms_ovulation_pms_and_menstrual">Ovulation, PMS and menstrual.</string>
    <string name="pms_read_more">Read more</string>
    <string name="pms_activate_service">Activate service</string>
    <string name="pms_warn_periods">Warn periods</string>
    <string name="pms_warn_ovulation">Warn ovulation</string>
    <string name="pms_warn_pms">Warn PMS</string>
    <string name="pms_log_periods">Log periods</string>
    <string name="log_first_day">Log første menstrutionsdag ➕</string>
    <string name="pms_logs">Logs</string>
    <string name="valentines_valentines_day">Valentines Day</string>
    <string name="valentines_activate_service">Activate service</string>
    <string name="a_year">year</string>
    <string name="a_year_short">y</string>
    <string name="years">years</string>
    <string name="year_short">y</string>
    <string name="a_month">month</string>
    <string name="a_month_short">mo</string>
    <string name="months">months</string>
    <string name="months_short">mo</string>
    <string name="a_week">week</string>
    <string name="a_week_short">w</string>
    <string name="week">week</string>
    <string name="week_short">w</string>
    <string name="a_day">day</string>
    <string name="a_day_short">d</string>
    <string name="days">days</string>
    <string name="days_short">d</string>
    <string name="an_hour">hour</string>
    <string name="an_hour_short">h</string>
    <string name="hour">hour</string>
    <string name="hour_short">h</string>
    <string name="a_minute">minute</string>
    <string name="a_minute_short">m</string>
    <string name="minutes">minutes</string>
    <string name="minutes_short">m</string>
    <string name="tine_now">now</string>
    <string name="her_name">Her name</string>
    <string name="her_petname">Her nickname</string>
    <string name="her_status">Her Status</string>
    <string name="reminder_time">00:00 ⏰</string>
    <string name="anniversary_add_event_text">Add text</string>
    <string name="pick_date">Pick the date</string>


    <string-array name="her_status_options">
        <item>Wife</item>
        <item>Girlfriend</item>
        <item>Other</item>
    </string-array>
</resources>
