<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/act_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/vd_1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/layout_ms_bg"
                    android:padding="6dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/vd_iv_1"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/gears_2" />

                    <TextView
                        android:id="@+id/vd_tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_iv_1"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="17dp"
                        android:textSize="32dp"
                        android:textColor="#FFF"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_manly_minder" />

                    <TextView
                        android:id="@+id/vd_tv_sub_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_1"
                        android:layout_alignStart="@+id/vd_iv_1"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_be_thoughtfull"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/vd_tv_1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_tv_sub_1"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="115dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_settings_title"
                        android:textColor="#FFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/vd_tv_sub_1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_1"
                        android:layout_alignStart="@+id/vd_iv_1"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="90dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_alert_intervals_inkognito_mode"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/act_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/layout_bd_bg"
                    android:padding="6dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/vd_iv_3"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/birthday_1"
                        />

                    <TextView
                        android:id="@+id/vd_tv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_iv_3"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="17dp"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_birthday" />

                    <TextView
                        android:id="@+id/vd_tv_sub_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_3"
                        android:layout_alignStart="@+id/vd_iv_3"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_get_her_something_nice"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/vd_tv_sub_3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_sub_3"
                        android:layout_alignStart="@+id/vd_tv_sub_3"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_birthday_in"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/act_valentines"
                android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/layout_vd_bg"
                android:padding="6dp"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/vd_iv_2"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/valentines_day" />

                <TextView
                    android:id="@+id/vd_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/vd_iv_2"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="17dp"
                    android:textSize="20dp"
                    android:textColor="#000"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/main_valentine_day" />

                <TextView
                    android:id="@+id/vd_tv_sub_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/vd_tv_2"
                    android:layout_alignStart="@+id/vd_iv_2"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/main_just_do_it"
                    android:textColor="#000"
                    android:textSize="10dp" />

            </RelativeLayout>
        </LinearLayout>
bb
            <LinearLayout
                android:id="@+id/act_anniversary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/layout_vd_bg"
                    android:padding="6dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/vd_iv_5"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/pink_roses_1"
                        />

                    <TextView
                        android:id="@+id/vd_tv_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_iv_5"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="17dp"
                        android:textSize="20dp"
                        android:textColor="#000"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_anniversary" />

                    <TextView
                        android:id="@+id/vd_tv_sub_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_5"
                        android:layout_alignStart="@+id/vd_iv_5"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_and_other_stuff_that_needs_reminding"
                        android:textColor="#000"
                        android:textSize="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/act_pms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/layout_pms_bg"
                    android:padding="6dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/vd_iv_4"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/chernobyl_bg_3"
                        />

                    <TextView
                        android:id="@+id/vd_tv_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_iv_4"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="17dp"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_pms" />

                    <TextView
                        android:id="@+id/vd_tv_sub_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_4"
                        android:layout_alignStart="@+id/vd_iv_4"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_those_citical_periods_be_warned_beforehand"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/act_flowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/layout_pms_bg"
                    android:padding="6dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/vd_iv_6"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/layout_bg_flowers"
                        />

                    <TextView
                        android:id="@+id/vd_tv_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/vd_iv_6"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="17dp"
                        android:textSize="20dp"
                        android:textColor="#FFF"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_flowers" />

                    <TextView
                        android:id="@+id/vd_tv_sub_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vd_tv_6"
                        android:layout_alignStart="@+id/vd_iv_6"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="3dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/main_dead_plants_do_the_trick"
                        android:textColor="#FFF"
                        android:textSize="10dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>